slight styling tweaks - fixing campaign code tooltip not showingl; made it a chip

--- a/src/styles/task-list.css
+++ b/src/styles/task-list.css
@@ -11,6 +11,7 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	font-family: "Lato", sans-serif;
 
 	.btn--refresh {
 		height: fit-content;
@@ -23,6 +24,7 @@
 	.task-list__total {
 		text-align: center;
 		margin-bottom: 1rem;
+		font-family: "Lato", sans-serif;
 	}
 	.loader {
 		text-align: center;
@@ -63,6 +65,7 @@
 
 			h5 {
 				max-width: 60%;
+				font-family: "Krub";
 			}
 		}
 		.task-card__info {
@@ -72,6 +75,7 @@
 			.task__info-chip {
 				color: var(--mui-palette-tomato-main);
 				border-color: var(--mui-palette-tomato-main);
+				margin-left: 0.2rem;
 				svg {
 					color: var(--mui-palette-secondary-700);
 					padding-left: 0.1rem;
@@ -81,8 +85,11 @@
 	}
 	.campaign-code {
 		color: var(--rose);
+		border-color: var(--rose);
 		font-weight: 600;
 		margin-left: 0.4rem;
+		font-size: 1rem;
+		font-family: "Nunito", sans-serif;
 	}
 	.task-list__card-actions {
 		justify-content: center;
